# Workspace for SpaceKit Standard Library contracts.
# Each crate depends on spacekit-contract-sdk from https://github.com/spacekit-xyz/spacekit-contract-sdk

[workspace]
members = [
  "access/astra-access-control",
  "agents/spacekit-agent",
  "agents/spacekit-agent-inference-market",
  "agents/spacekit-inference-mesh",
  "agents/spacekit-intent-classifier",
  "agents/spacekit-spacetime",
  "app-store",
  "payments/astra-escrow",
  "payments/astra-payment-router",
  "payments/payable-demo",
  "reputation/spacekit-reputation",
  "services/compression-service",
  "storage/spacekit-box",
  "storage/spacekit-tube",
  "tokens/sk-erc1155",
  "tokens/sk-erc20",
  "tokens/sk-erc721",
  "tokens/sk-erc8004",
]
