[package]
name = "routekit-agent"
version = "0.1.0"
edition = "2021"
description = "RouteKit agent — Growformer + web search + vault + messaging + remote storage (see README.md)"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
spacekit-contract-sdk = { path = "../../../spacekit-contract-sdk" }
wee_alloc = "0.4"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[profile.dev]
panic = "abort"
