[package]
name = "spacekit-intent-classifier"
version = "0.1.0"
edition = "2021"
description = "SpaceKit Intent Classifier contract - uses LLM for intelligent on-chain operations"

[lib]
crate-type = ["cdylib"]

[dependencies]
spacekit-contract-sdk = { git = "https://github.com/spacekit-xyz/spacekit-contract-sdk" }
wee_alloc = "0.4"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true

[profile.dev]
panic = "abort"

